SERVER-33509 unpack applyOps commands on all storage engines during oplog application